Implement basic velocity and PositioningSystem.java system